[package]
name = "winston_transport"
version = "0.1.1"
edition = "2021"
description = "winston-transport for rust"
license = "MIT"
documentation = "https://docs.rs/winston_transport"
repository = "https://github.com/ifeanyi-ugwu/winston_transport_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "transport"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.38"
logform = "0.1.5"
serde_json = "1.0.127"
