[package]
name = "winston_transport"
version = "0.4.0"
edition = "2021"
description = "winston-transport for rust"
license = "MIT"
documentation = "https://docs.rs/winston_transport"
repository = "https://github.com/ifeanyi-ugwu/winston_transport_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "transport"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.38"
dateparser = "0.2.1"
logform = { version = "0.4.0", path = "../logform", features = ["serde"] }
parse_datetime = "0.6.0"
regex = "1.11.1"
serde_json = "1.0.127"
serde = { version = "1.0.217", features = ["derive"] }
jsonpath-rust = "1.0.0"
